--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="stylesheets/lib/sanitize.min.css">
 	<link rel="stylesheet" href="stylesheets/lib/jquery-ui.min.css">
 	<link rel="stylesheet" href="stylesheets/src/style.css">
+	<link rel="apple-touch-icon" href="images/icon.png"/>
 
   <title>TwiMemo</title>
 </head>
